# hintents

./: .gitignore  .golangci.yml  CHECKLIST.md  CODE_OF_CONDUCT.md  Cache_COMMANDS.md  Dockerfile  FEATURE_ERROR_SUGGESTIONS.md  FUZZY_SEARCH_IMPLEMENTATION.md  IMPLEMENTATION_SUMMARY.md  ISSUE_393_IMPLEMENTATION.md  ISSUE_95_VERIFICATION.md  Makefile  OTEL_IMPLEMENTATION.md  PR_DESCRIPTION.md  PR_DESCRIPTION_RPC_AUTH.md  PULL_REQUEST_TEMPLATE.txt  README.md  SECURITY_IMPLEMENTATION.md  SECURITY_REMEDIATION_PR463.md  TEST_OUTPUT_EXAMPLE.md  XDR_GENERATOR_PR_SUMMARY.md  commit_309_changes.sh  coverage.out  docker-compose.jaeger.yml  emojis.py  erst-sim  erst.example.toml  fix_all_licenses.sh  fix_imports.sh  fix_licenses.sh  force_fix_licenses.sh  go.mod  go.sum  jest.config.js  linux_results.txt  main.go  main_test.go  merge_test_fail.txt  package-lock.json  package.json  (+12 more)
.github/: PULL_REQUEST_TEMPLATE.md
cmd/: completion.go  generate-bindings.go  root.go
docs/: ARCHITECTURE.md  AWS_KMS_SIGNING_ARTIFACT.md  BUDGET_METRICS.md  CLI.md  CLI_ARCHITECTURE.md  CONTRIBUTING.md  COOKBOOK.md  CUSTOM_NETWORKS.md  DASHBOARD_INTEGRATION.md  ERROR_SUGGESTIONS.md  FOOTPRINT_EXTRACTION.md  ci-cd.md  (+30 more)
simulator/: Cargo.toml
simulator/src/: gas_optimizer.rs  git_detector.rs  lib_deep_recursion_contract.rs  lib_endless_loop_contracts.rs  lib_oom_contracts.rs  lib_trap_contract.rs  main.rs  main_test.rs  runner.rs  simulator_safety_test.rs  source_map_cache.rs  source_mapper.rs  stack_trace.rs  storage.rs  test.rs  types.rs  vm.rs  wasm.rs
simulator/src/cli/: mod.rs  trace_viewer.rs
simulator/src/config/: mod.rs  paths.rs
simulator/src/ipc/: mod.rs  validate.rs
simulator/src/snapshot/: README.md  mod.rs
simulator/src/theme/: ansi.rs  loader.rs  mod.rs  theme.rs  types.rs
simulator/tests/: signature_verification_mock_test.rs
simulator/tests/regression/: README.md
(+423 files in other folders)
