[package]
name = "simulator"
version = "0.1.0"
edition = "2021"

[dependencies]
# soroban-env-host major version == Soroban protocol version.
# Protocol 21 (v21.x) introduced DiagnosticLevel, get_events(), and the
# HostedContractEvent.failed_call field that this simulator relies on.
# We accept any release in the 21-25 range so the binary stays compatible
# with both mainnet protocol 21 and subsequent minor protocol bumps.
soroban-env-host = { version = ">=21.0, <26" } # Updated to latest version
base64 = "0.21"
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
inferno = "0.11"
jsonschema = "0.40.2"
object = "0.38.1"
wasmparser = "0.208"

[dev-dependencies]
wat = "1.0"
gimli = "0.28"
addr2line = "0.21"
